infrastructure/base/configs/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    istio-injection: enabled
