infrastructure/base/configs/traefik/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-to-internal-bridge
  namespace: traefik-system
spec:
  hosts:
    - "dev-01.skiyl9x.pp.ua"
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:

    - address: kube-dns.kube-system.svc.cluster.local
